# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.44 2005/01/25 23:20:01 port001 Exp $

CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                work with the new SiteModule backend. Note: some of the
                templates appear have been broken prior to the SiteModule
                rewrite, but somehow worked. 

25 Jan 2005; Ian Leitch <port001@gentoo.org>
 * Updated uncaught exception reporting to work with fcgi

25 Jan 2005; Scott Hadfield <hadfield@gentoo.org>
 * Template bug fix
 * Added three default values to each multi-dimentional template loop; _counter,
   _is_odd, and _is_even.
 * Implemented the memberlist page
 * Added favorite language to the user table

24 Jan 2005; Scott Hadfield <hadfield@gentoo.org>
 * Initial code for the memberlist page written
 * Added 'location' and 'website' fields to the user table.
 * Fixed some mixed tabs and spaces.

31 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * As a security measure, site modules now have to specify what methods they need to call.

29 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * New site module parent class: pym/SiteModule.py
 * Updated site modules to use new class

28 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Replace the 'values' method with a class with methods like the 
   old cgi.FieldStorage

24 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Improved the 'Who Is Online' slightly 
 * Add a 'values' method to the cgi.Request class at runtime.
   Provides an easier way to retrieve form values. 
 * Rewrote the Session module
 * Converted index to use fastcgi
   NOTE: This has broken most modules, though not hard to fix.

21 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Small fixes

18 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Fixes in the MySQL module
 * Reworked page/module discovering code. Metadata now in __init__.py
