@@ -11,7 +11,7 @@ the possibility of breakage from importing a dodgy module
 a function might not use.
 """
 
-__revision__ = '$Id: Error.py,v 1.6 2005/01/25 23:20:01 port001 Exp $'
+__revision__ = '$Id: Error.py,v 1.7 2005/01/26 02:18:55 port001 Exp $'
 __modulename__ = 'Error'
 
 def error_tb(req):
@@ -20,23 +20,24 @@ def error_tb(req):
     import traceback
     from time import gmtime, strftime
 
+    from jon.cgi import SequencingError
+
     import Config
     from Logging import logwrite
 
     try:
-        req.clear_headers()
 	req.clear_output()
     except SequencingError:
         pass
-
-    req.set_header('Content-Type', 'text/html; charset=utf-8')
-    req.output_headers()
 
     exception_time = strftime("%d/%b/%Y %H:%M:%S", gmtime())
     
     (tbtype, value, traceb) = sys.exc_info()
     tblines = traceback.format_exception(tbtype, value, traceb)
     # FIXME: multine line statements are getting chopped off somewhere in the traceback module.
+
+    if str(tbtype) == 'exceptions.SystemExit':
+        return
 
     if Config.ErrorReporting == True:
     # FIXME: Print the exception directly to the ErrorReportLog so we don't need to rely on Logging to be enabled
@@ -120,3 +121,5 @@ def error_tb(req):
                      </tr>\n
                      </table>\n
                   """)
+
+    sys.exit(0)
