@@ -1,12 +1,11 @@
-# Copyright 2004 Ian Leitch
-# Copyright 2004 Scott Hadfield
-# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Copyright 2004-2005 Ian Leitch
+# Copyright 2004-2005 Scott Hadfield
+# Copyright 1999-2005 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Session.py,v 1.7 2005/01/25 00:58:34 hadfield Exp $
-#
 
-__modulename__ = "Session"
+__revision__ = '$Id: Session.py,v 1.8 2005/01/26 02:18:55 port001 Exp $'
+__modulename__ = 'Session'
 
 import sha
 import hmac
@@ -22,8 +21,8 @@ MySQLHandler = MySQL.MySQL()
 
 class Session:
 
-    full_tablename = Config.MySQL["prefix"] + Config.MySQL["session_table"]
-    tablename = Config.MySQL["session_table"]
+    full_tablename = Config.MySQL['prefix'] + Config.MySQL['session_table']
+    tablename = Config.MySQL['session_table']
 
     def __init__(self, req, page):
 
@@ -44,41 +43,42 @@ class Session:
         ran = Random()
 
         return sha.new(str(time() * ran.randint(0, 10000000000000000000000000)) + \
-                       str(self._req.environ.get("UNIQUE_ID"))).hexdigest()[:10]
+                       str(self._req.environ.get('UNIQUE_ID'))).hexdigest()[:10]
 
     def _set_cookie(self):
 
         bourbon = Cookie.SimpleCookie()
 
-        bourbon["glsrid"] = self._sid + self._hash
+        bourbon['glsrid'] = self._sid + self._hash
+	# FIXME: Uncomment the following for releases
         #bourbon["glsrid"]["domain"] = Config.CookieDomain
         #bourbon["glsrid"]["path"] = Config.CookiePath
 
         if Config.CookieSecure:
-            bourbon["glsrid"]["secure"] = 1
+            bourbon['glsrid']['secure'] = 1
 
-        self._req.add_header("Set-Cookie", bourbon["glsrid"].OutputString())
+        self._req.add_header('Set-Cookie', bourbon['glsrid'].OutputString())
 
     def _remove_cookie(self):
 
         chocchip = self._req.cookies
 
-        chocchip["glsrid"] = None
-        chocchip["glsrid"]["max-age"] = 0
+        chocchip['glsrid'] = None
+        chocchip['glsrid']['max-age'] = 0
 
-        self._req.add_header("Set-Cookie", chocchip["glsrid"].OutputString())
+        self._req.add_header('Set-Cookie', chocchip['glsrid'].OutputString())
         
     def _remove_session(self):
 
         MySQLHandler.query("DELETE FROM %s WHERE %s_id = " %
                           (self.full_tablename, self.tablename) + "%s", self._sid,
-                          fetch = "none")
+                          fetch = 'none')
 
     def _load_cookie(self):
 
-        if self._req.cookies.has_key("glsrid"):
-            self._sid = self._req.cookies["glsrid"].value[:10]
-            self._hash = self._req.cookies["glsrid"].value[10:]
+        if self._req.cookies.has_key('glsrid'):
+            self._sid = self._req.cookies['glsrid'].value[:10]
+            self._hash = self._req.cookies['glsrid'].value[10:]
             return True
         else:
             return False
@@ -96,13 +96,13 @@ class Session:
         MySQLHandler.query("UPDATE %s SET %s_time = UNIX_TIMESTAMP() " %
                            (self.full_tablename, self.tablename) +
                            "WHERE %s_id =" % self.tablename + " %s",
-                           self._sid, fetch="none")
+                           self._sid, fetch='none')
 
     def _save_session(self):
         
         MySQLHandler.query("INSERT INTO %s (%s_id) " % 
                            (self.full_tablename, self.tablename) +
-                           "VALUES (%s)", self._sid, fetch="none")
+                           "VALUES (%s)", self._sid, fetch='none')
 
     def _resume(self):
 
@@ -121,7 +121,7 @@ class Session:
         result = MySQLHandler.query("SELECT %s_user_id FROM %s " % 
                                     (self.tablename, self.full_tablename) +
                                     "WHERE %s_id = " % self.tablename + "%s",
-                                    self._sid, fetch="one")
+                                    self._sid, fetch='one')
 
         if result == None:
             return False
@@ -135,16 +135,17 @@ class Session:
         result = MySQLHandler.query("SELECT %s_id FROM %s " %
                                     (self.tablename, self.full_tablename) +
                                     "WHERE %s_id =  " % self.tablename +
-                                    "%s " + "AND %s_time " % self.tablename +
+				    "%s " + "AND %s_keep = 0 " % self.tablename +
+                                    "AND %s_time " % self.tablename +
                                     "< UNIX_TIMESTAMP() - %s", (self._sid, Config.SessionTimeout),
-                                    fetch="one")
+                                    fetch='one')
 
         return result != None
 
     def init(self):
 
         if self._load_cookie() and self._is_valid():
-            if self._page != "logout":
+            if self._page != 'logout':
                 if self._is_registered():
                     self.is_registered = True
                     self._resume()
@@ -156,12 +157,15 @@ class Session:
         else:
              self._create()
 
-    def assign_uid(self, uid):
+    def assign_uid(self, uid, keep=0):
 
         MySQLHandler.query("UPDATE %s SET " % self.full_tablename +
                            "%s_user_id " % self.tablename +
-                           "= %s" + " WHERE %s_id" % self.tablename +
-                           "= %s", (uid, self._sid), fetch="none")
+                           "= %s, " + 
+                           "%s_keep " % self.tablename +
+			   "= %s " +
+			   "WHERE %s_id" % self.tablename +
+                           "= %s", (uid, keep, self._sid), fetch='none')
 
     def remove(self):
 
@@ -173,7 +177,7 @@ class Session:
         return MySQLHandler.query("SELECT %s_user_id FROM %s " %
                                   (self.tablename, self.full_tablename) +
                                   "WHERE %s_id = " % self.tablename +
-                                  "%s", self._sid, fetch="one")["%s_user_id" %
+                                  "%s", self._sid, fetch='one')["%s_user_id" %
                                                                 self.tablename]
     def get_active(self, grace):
 
@@ -183,7 +187,7 @@ class Session:
         result =  MySQLHandler.query("SELECT %s_user_id FROM %s " %
                                      (self.tablename, self.full_tablename) +
                                      "WHERE (UNIX_TIMESTAMP() - %s_time) <= " %
-                                     self.tablename + "%s", grace, fetch="all")
+                                     self.tablename + "%s", grace, fetch='all')
         for session in result:
             if session['session_user_id'] == 0:
                 guest_count += 1
