@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.44 2005/01/25 23:20:01 port001 Exp $
+# $Id: ChangeLog,v 1.45 2005/01/26 02:18:55 port001 Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
@@ -10,6 +10,7 @@ CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 rewrite, but somehow worked. 
 
 25 Jan 2005; Ian Leitch <port001@gentoo.org>
+ * Added a "Remember me" option on the login screen
  * Updated uncaught exception reporting to work with fcgi
 
 25 Jan 2005; Scott Hadfield <hadfield@gentoo.org>
